<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_business"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/business" />
        <item
            android:id="@+id/nav_entertainment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/entertainment" />
        <item
            android:id="@+id/nav_gaming"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/gaming" />
        <item
            android:id="@+id/nav_general"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/general" />
        <item
            android:id="@+id/nav_music"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/music" />
        <item
            android:id="@+id/nav_politics"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/politics" />
        <item
            android:id="@+id/nav_science"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/science" />
        <item
            android:id="@+id/nav_sport"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/sports" />
        <item
            android:id="@+id/nav_technology"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/tech" />
        <item
            android:id="@+id/nav_savedArticles"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/savedArticles" />
    </group>

</menu>
